--- a/src/styles/components/page-form.css
+++ b/src/styles/components/page-form.css
@@ -1,7 +1,7 @@
 .page-form {
   max-width: 340px;
   width: 100%;
-  padding: 50px 30px 30px 30px;
+  padding: 50px 30px 30px;
   border-radius: 12px;
   box-shadow: 0px 0px 6px 0px #00000024;
   background-color: var(--white-bg-color);
