--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 /* @import 'normalize'; */
 :root {
-  --white-bg-color: #FFFFFF;
+  --white-bg-color: #FFF;
   --gray-bg-color: #EFEFEF;
   --light-gray-bg-color: #FBFBFB;
   --blue-bg-color: #3369F3;
   --light-blue-color: #E4EDFD;
-
   --black-color: #1E1E1E;
-  --dark-gray-color: #999999;
+  --dark-gray-color: #999;
   --gray-color: #EFEFEF;
   --light-gray-color: #EAEAEA;
   --blue-color: #3369F3;
@@ -54,13 +53,13 @@ body {
 *::after {
   box-sizing: border-box;
 }
-ol, ul, li { 
-  list-style: none; 
+ol, ul, li {
+  list-style: none;
   margin: 0;
   padding: 0;
 }
-a { 
-  text-decoration: none; 
+a {
+  text-decoration: none;
   color: inherit;
   cursor: pointer;
 }
@@ -74,11 +73,9 @@ button {
   margin: 0 auto;
   height: 100vh;
   overflow: hidden;
-
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-
   font-family: "Inter", sans-serif;
   font-weight: 500;
   color: var(--black-color);
@@ -135,11 +132,9 @@ main {
   max-width: 280px;
   width: 100%;
   height: 37px;
-
   display: flex;
   align-items: center;
   justify-content: center;
-
   background-color: var(--blue-color);
   font-size: 13px;
   line-height: 13px;
@@ -150,11 +145,9 @@ main {
 .button-link {
   width: 100%;
   height: 37px;
-
   display: flex;
   align-items: center;
   justify-content: center;
-
   font-size: 11px;
   line-height: 11px;
   text-align: left;
@@ -269,10 +262,8 @@ main {
 }
 .chat-feed .send-message .attach {
   position: relative;
-
   height: 32px;
   width: 32px;
-
   background-image: url(../icons/attach-icon.svg);
   background-position: center center;
   background-size: cover;
@@ -358,7 +349,6 @@ main {
 .chats .top-bar {
   display: flex;
   flex-direction: column;
-
   padding: 10px 0 14px 0;
 }
 .chats .profile-link {
@@ -371,7 +361,6 @@ main {
   margin-left: auto;
   padding-right: 12px;
   margin-bottom: 23px;
-
   position: relative;
 }
 .chats .profile-link::after {
@@ -391,15 +380,14 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-
   overflow-y: auto;
   border-top: 1px solid var(--light-gray-color);
 }
 .chats-box::-webkit-scrollbar {
-  width: 4px;               
+  width: 4px;
 }
 .chats-box::-webkit-scrollbar-track {
-  background: var(--light-gray-bg-color);        
+  background: var(--light-gray-bg-color);
 }
 .chats-box::-webkit-scrollbar-thumb {
   background-color: var(--gray-bg-color);
@@ -422,7 +410,6 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   margin-bottom: 70px;
 }
 .error-title {
@@ -442,7 +429,6 @@ main {
   width: 100%;
   border-bottom: 1px solid var(--blue-bg-color);
   margin-bottom: 16px;
-
   position: relative;
 }
 .form-input .input-label {
@@ -450,7 +436,6 @@ main {
   font-size: 9px;
   line-height: 9px;
   text-align: left;
-
   margin-bottom: 4px;
 }
 .form-input .input-field {
@@ -480,14 +465,12 @@ main {
   font-weight: 400;
   line-height: 8px;
   text-align: left;
-
   opacity: 0;
 }
 .frame {
   display: none;
   align-items: center;
   justify-content: center;
-
   padding: 15px;
   border-radius: 12px;
   box-shadow: 0 0 6px #00000024;
@@ -530,14 +513,12 @@ main {
   display: none;
   align-items: center;
   justify-content: center;
-
   background: rgba(0, 0, 0, 0.4);
 }
 .modal-content {
   display: flex;
   align-items: center;
   justify-content: center;
-
   max-width: 340px;
   width: 100%;
   padding: 50px 30px 30px;
@@ -558,7 +539,7 @@ main {
 .page-form {
   max-width: 340px;
   width: 100%;
-  padding: 50px 30px 30px 30px;
+  padding: 50px 30px 30px;
   border-radius: 12px;
   box-shadow: 0px 0px 6px 0px #00000024;
   background-color: var(--white-bg-color);
@@ -594,7 +575,7 @@ main {
   font-size: 13px;
   line-height: 13px;
   text-align: left;
-  color: var(--black-color);  
+  color: var(--black-color);
   flex-shrink: 0;
 }
 .profile-input .input-field {
@@ -602,25 +583,24 @@ main {
   font-size: 13px;
   line-height: 13px;
   text-align: right;
-  color: var(--dark-gray-color);  
+  color: var(--dark-gray-color);
 }
 .profile-input .input-field::-moz-placeholder {
   font-size: 13px;
   line-height: 13px;
   text-align: right;
-  color: var(--dark-gray-color);  
+  color: var(--dark-gray-color);
 }
 .profile-input .input-field::placeholder {
   font-size: 13px;
   line-height: 13px;
   text-align: right;
-  color: var(--dark-gray-color);  
+  color: var(--dark-gray-color);
 }
 .search-input {
   height: 32px;
   width: 100%;
   padding: 10px;
-
   background-color: var(--gray-bg-color);
   font-size: 12px;
   line-height: 12px;
@@ -639,7 +619,6 @@ main {
 .chat-page {
   width: 100%;
   height: 100%;
-
   display: grid;
   grid-template-columns: 310px 1fr;
   grid-template-rows: 100%;
@@ -668,7 +647,6 @@ main {
   width: 100%;
   height: 100%;
   position: relative;
-
   display: grid;
   grid-template-columns: 64px 1fr;
   grid-template-rows: 100%;
@@ -695,13 +673,11 @@ main {
   margin-bottom: 20px;
   border-radius: 50%;
   overflow: hidden;
-
   position: relative;
 }
 .profile .avatar {
   width: 130px;
   height: 130px;
-  
   background-image: url(../icons/avatar-icon.svg);
   background-repeat: no-repeat;
   background-position: center center;
@@ -715,7 +691,6 @@ main {
   right: 0;
   bottom: 0;
   cursor: pointer;
-
   align-items: center;
   justify-content: center;
   font-size: 13px;
@@ -729,7 +704,6 @@ main {
   font-weight: 600;
   line-height: 16px;
   text-align: center;
-
   margin-bottom: 60px;
 }
 .profile .info {
