--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -56,6 +56,9 @@
     margin-top: 10px;
 }
 
-.button-delete {
-
+.button-frame {
+    font-size: 12px;
+    line-height: 14px;
+    text-align: left;
+    background-color: transparent;
 }
