--- a/src/styles/components/chat-feed.css
+++ b/src/styles/components/chat-feed.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 0 20px;
+  height: 100%;
 }
 
 .chat-feed .top-bar {
@@ -51,12 +52,27 @@
 }
 
 .chat-feed .messages {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  height: 100%;
-  padding: 30px 0;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    height: 100%;
+    padding: 30px 0;
+    overflow-y: auto;
+    row-gap: 10px;
 }
+
+.chat-feed .messages::-webkit-scrollbar {
+    width: 4px;
+  }
+
+.chat-feed .messages::-webkit-scrollbar-track {
+    background: var(--light-gray-bg-color);
+  }
+
+.chat-feed .messages::-webkit-scrollbar-thumb {
+    background-color: var(--gray-bg-color);
+    border-radius: 0;
+  }
 
 .chat-feed .outcoming-message {
   background-color: var(--light-blue-color);
